--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,13 +1,13 @@
 pipeline {
   agent { label 'linux' }
   environment {
-   KUBECONFIG=credentials('kubeid') 
+   KUBECONFIG=credentials( kubeid ) 
   }
   stages {
     stage('Hello') {
       steps {
         sh 'ansible-galaxy collection install -r requirements.yml'
-        sh 'ansible-playbook test-playbook.yaml'
+        sh "ansible-playbook test-playbook.yaml -e KUBECONFIG=$KUBECONFIG"
       }
     }
   }
