--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stage('Hello') {
       steps {
         sh 'ansible-galaxy collection install -r requirements.yml'
-        sh "ansible-playbook test-playbook.yaml -e KUBECONFIG=$KUBECONFIG"
+        sh 'ansible-playbook test-playbook.yaml'
       }
     }
   }
