--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
   stages {
     stage('dev') {
       steps {
+        sh 'sudo apt-get update'
         // sh 'ansible-galaxy collection install -r requirements.yaml'
         sh 'ansible-playbook test-playbook.yaml  --extra-vars config=$KUBECONFIG'
       }
