--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
       steps {
         sh 'sudo apt-get update'
         // sh 'ansible-galaxy collection install -r requirements.yaml'
-        sh 'ansible-playbook test-playbook.yaml  --extra-vars config=$KUBECONFIG -b '
+        sh 'ansible-playbook test-playbook.yaml  --extra-vars config=$KUBECONFIG'
       }
     }
   }
