--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
     stage('dev') {
       steps {
         sh 'sudo apt-get update'
+        sh 'echo $KUBECONFIG'
         // sh 'ansible-galaxy collection install -r requirements.yaml'
         sh 'ansible-playbook test-playbook.yaml  --extra-vars config=$KUBECONFIG'
       }
