--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,9 +7,8 @@ pipeline {
     stage('dev') {
       steps {
         sh 'sudo apt-get update'
-        sh 'echo "$KUBECONFIG"'
         // sh 'ansible-galaxy collection install -r requirements.yaml'
-        sh 'ansible-playbook test-playbook.yaml  --extra-vars config=$KUBECONFIG'
+        sh 'ansible-playbook test-playbook.yaml  --extra-vars config=$KUBECONFIG -vvv'
       }
     }
   }
