--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stage('dev') {
       steps {
         sh 'sudo apt-get update'
-        // sh 'ansible-galaxy collection install -r requirements.yaml'
+        sh ' ansible-galaxy collection install kubernetes.core'
         sh 'ansible-playbook test-playbook.yaml  --extra-vars config=$KUBECONFIG -vvv'
       }
     }
