--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -3,7 +3,9 @@
   pre_tasks:
     - name: Install python pip3
       package:
-        name: python3-pip
+        name:
+         - python3 
+         - python3-pip
         state: present
     - name: install requirements
       pip:
