--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -6,6 +6,7 @@
         name:
          - python3 
          - python3-pip
+        become: true
         state: present
     - name: install requirements
       pip:
