--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -24,3 +24,6 @@
         api_version: v1
         kind: Pod
       register: pod_list
+    - name: Display k8s Cluster details
+      debug:
+        msg: "{{ pod_list }}"
