--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
       steps {
         sh 'sudo apt-get update'
         sh 'ansible-galaxy collection install kubernetes.core'
+        sh 'ansible-galaxy collection install cloud.common'
         sh 'ansible-playbook test-playbook.yaml  --extra-vars config=$KUBECONFIG'
       }
     }
