--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
   agent { label 'linux' }
   environment {
-   KUBECONFIG=credentials('kubeid') 
+   KUBECONFIG=credentials('K8s-sandbox') 
   }
   stages {
     stage('dev') {
