--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -1,11 +1,11 @@
 ---
 - hosts: localhost
   pre_tasks:
-    - name: Install python pip3
-      package:
-        name:
-         - python3-pip
-        state: present
+    #- name: Install python pip3
+    #  package:
+    #    name:
+    #     - python3-pip
+    #    state: present
     - name: install requirements
       pip:
         name:
