--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -11,6 +11,7 @@
         name:
           - kubernetes
           - openshift
+      ignore_errors: yes
   collections:
     - kubernetes.core
   environment:
